--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-PyQt6>=6.4.0
-pyautogui>=0.9.54
-Pillow>=9.0.0
-keyboard>=0.13.5
-autoit-py>=0.1.0
-requests>=2.25.0
-easyocr>=1.6.0
-numpy>=1.21.0
+PyQt6
+Pillow
+keyboard
+autoit
+requests
+numpy
+pytesseract
+opencv-python
+fuzzywuzzy
+python-Levenshtein
